Disabling the modem should put signal strength to 0%
What happens?
When putting the modem into low power mode or disabled, the signal strength is still cached and not 0%. DBus clients such as PulseAudio or mmcli still think there's a signal quality value available but we know there's no signal because the modem is offline.
mmcli -m any
reports:
Status | lock: sim-pin2
| unlock retries: sim-pin (3), sim-puk (10), sim-pin2 (3), sim-puk2 (10)
| state: disabled
| power state: low
| signal quality: 67% (cached)
If you turn on the modem again, the signal quality gets updated:
Status | lock: sim-pin2
| unlock retries: sim-pin (3), sim-puk (10), sim-pin2 (3), sim-puk2 (10)
| state: registered
| power state: on
| access tech: lte
| signal quality: 75% (recent)
What's supposed to happen?
Signal strength is set to 0% because the modem is offline.
Environment
- ModemManager 1.18.6
- postmarketOS edge